# sogol

./: .gitignore  .python-version  CONTRIBUTING.md  LICENSE  README.md  TODO  pyproject.toml  setup.py  sogolife.py
.github/workflows/: lint.yml  test.yml
sogol/: __init__.py  game.py  sogol.py  sound.py
src/: sound_of_life.py
src/sogol/: sogol.py
src/sol/: __init__.py  game.py  sol.py  sound.py
tests/: test_game.py
