[tool.poetry]
name = "sogol"
version = "0.2.0-alpha"
description = "Sound of Game of Life."
homepage = "https://github.com/moyiz/sogol"
repository = "https://github.com/moyiz/sogol"
authors = ["moyiz <8603313+moyiz@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

[tool.poetry.scripts]
sogol = "sogol:main"

[tool.poetry.dependencies]
python = ">=3.6.2"
docopt = "^0.6.2"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
